<resources>
    <string name="app_name">Item</string>
    <string name="title_home">首页</string>
    <string name="title_special">专题</string>
    <string name="title_classify">分类</string>
    <string name="title_shopping">购物车</string>
    <string name="title_me">我的</string>
    <string name="title_car_specs">请选择规格数量</string>
    <string name="title_car_assess">评价($)</string>
    <string name="title_car_lookall">查看全部</string>


    <string name="tips_error_goodid">错误的商品id</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="hint_login_username">请输入用户名</string>
    <string name="hint_login_pw">请输入密码</string>

    <string name="tips_login">请输入正确的用户名和密码</string>
    <string name="tips_buynumber">请选中购买商品数量</string>
</resources>