<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.item.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_special"
        android:name="com.example.item.ui.dashboard.SpecialFragment"
        android:label="@string/title_special"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_classify"
        android:name="com.example.item.ui.notifications.ClassifyFragment"
        android:label="@string/title_classify"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_shopping"
        android:name="com.example.item.ui.shopping.ShoppingFragment"
        android:label="@string/title_shopping"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_me"
        android:name="com.example.item.ui.me.MyFragment"
        android:label="@string/title_me"
        tools:layout="@layout/fragment_notifications" />
</navigation>