<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.adapter.ShopActivity">
    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/layout_shop">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <com.youth.banner.Banner
                android:id="@+id/banner"
                android:layout_width="match_parent"
                android:layout_height="@dimen/car_banner_height"/>
            <!--商品信息-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_200">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                  android:gravity="center"
                    android:textColor="#000000"
                    android:textSize="@dimen/dp_20"
                    android:layout_marginTop="@dimen/dp_20"
                    android:id="@+id/head_title"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/dp_10"
                    app:layout_constraintTop_toBottomOf="@id/head_title"
                    android:id="@+id/head_text"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#F44336"
                    android:gravity="center"
                    app:layout_constraintTop_toBottomOf="@id/head_text"
                    android:layout_marginTop="@dimen/dp_50"
                    android:id="@+id/head_price"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <!--数量选择区域-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/title_car_specs"
                    android:textSize="@dimen/sp_20"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginLeft="@dimen/dp_20"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_arrow_rt"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginRight="@dimen/dp_20"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_5"
                android:background="#ECE9E9"/>
            <!--商品评论区域-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/mCl_category_assess"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">
                <TextView
                    android:id="@+id/txt_assess"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/title_car_assess"
                    android:textSize="@dimen/sp_20"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginLeft="@dimen/dp_20"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/title_car_lookall"
                    android:textSize="@dimen/sp_20"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginRight="@dimen/dp_20"
                    android:drawableRight="@mipmap/ic_arrow_rt"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="#ECE9E9"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_marginLeft="@dimen/dp_20"/>
            <!--评论内容-->

            <!--商品参数区域-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="商品参数"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:textSize="@dimen/sp_20"
                    android:id="@+id/text"/>
              <LinearLayout
                  android:id="@+id/linear1"
                  android:layout_width="@dimen/dp_320"
                  android:layout_height="@dimen/dp_30"
                  app:layout_constraintTop_toBottomOf="@id/text"
                  app:layout_constraintLeft_toLeftOf="parent"
                  app:layout_constraintRight_toRightOf="parent"
                  android:orientation="horizontal">
                  <TextView
                      android:layout_width="wrap_content"
                      android:layout_height="match_parent"
                      android:gravity="center_vertical"
                      android:text="规格"
                      />
                  <TextView
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:gravity="center"
                      android:id="@+id/size"
                      />
              </LinearLayout>
                <LinearLayout
                    android:id="@+id/linear2"
                    android:layout_width="@dimen/dp_320"
                    android:layout_height="@dimen/dp_30"
                    app:layout_constraintTop_toBottomOf="@id/linear1"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="外套材质"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:id="@+id/texture"
                        />
                </LinearLayout>
                <LinearLayout
                android:id="@+id/linear3"
                android:layout_width="@dimen/dp_320"
                android:layout_height="@dimen/dp_30"
                app:layout_constraintTop_toBottomOf="@id/linear2"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="内胆材质"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:id="@+id/Liner"
                    />
            </LinearLayout>
                <LinearLayout
                    android:id="@+id/linear4"
                    android:layout_width="@dimen/dp_320"
                    android:layout_height="@dimen/dp_30"
                    app:layout_constraintTop_toBottomOf="@id/linear3"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="*温馨提示"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:id="@+id/hint"
                        />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">
              <!--商品详情区域-->
              <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content">
                  <androidx.recyclerview.widget.RecyclerView
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:id="@+id/recycler_h5"
                      app:layout_constraintTop_toBottomOf="parent"/>
              </LinearLayout>
              <!--商品常见问题区域-->
              <androidx.constraintlayout.widget.ConstraintLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content">
                  <TextView
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      app:layout_constraintLeft_toLeftOf="parent"
                      app:layout_constraintRight_toRightOf="parent"
                      android:text="-- 常见问题 --"
                      android:textSize="@dimen/dp_18"
                      android:id="@+id/wen"
                      android:layout_marginTop="@dimen/dp_25"
                      app:layout_constraintTop_toTopOf="parent"/>
                  <androidx.recyclerview.widget.RecyclerView
                      app:layout_constraintTop_toBottomOf="@id/wen"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:id="@+id/recycler_issue"/>

              </androidx.constraintlayout.widget.ConstraintLayout>
          </LinearLayout>
            <!--大家都在看的商品区域-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:text="-- 大家都在看 --"
                    android:textSize="@dimen/dp_18"
                    android:id="@+id/kan"
                    android:layout_marginTop="@dimen/dp_25"
                    app:layout_constraintTop_toTopOf="parent"/>
                <androidx.recyclerview.widget.RecyclerView
                    app:layout_constraintTop_toBottomOf="@id/kan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/recycler_look"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_shop"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scrollView">
        <FrameLayout
            android:id="@+id/layout_collect"
            android:layout_width="@dimen/dp_60"
            android:layout_height="match_parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/layout_car">
            <ImageView
                android:id="@+id/img_collect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_collect_normal"
                android:layout_gravity="center"/>
        </FrameLayout>
        <FrameLayout
            android:id="@+id/layout_car"
            android:layout_width="@dimen/dp_60"
            android:layout_height="match_parent"
            app:layout_constraintLeft_toRightOf="@id/layout_collect"
            app:layout_constraintRight_toLeftOf="@id/txt_buy">
            <ImageView
                android:id="@+id/img_car"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_car"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/txt_number"
                android:layout_width="@dimen/sp_15"
                android:layout_height="@dimen/sp_15"
                android:layout_gravity="center"
                android:text="11"
                android:textSize="@dimen/sp_8"
                android:layout_marginBottom="@dimen/dp_10"
                android:layout_marginLeft="@dimen/dp_10"
                android:gravity="center"
                android:background="@drawable/shape_car_number"
                android:textColor="#fff"/>
        </FrameLayout>
        <TextView
            android:id="@+id/txt_buy"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="加入购物车"
            android:textSize="@dimen/sp_20"
            app:layout_constraintLeft_toRightOf="@id/layout_car"
            app:layout_constraintRight_toLeftOf="@id/txt_addCar"/>
        <TextView
            android:id="@+id/txt_addCar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="立即购买"
            android:background="#F44336"
            android:textSize="@dimen/sp_20"
            app:layout_constraintLeft_toRightOf="@id/txt_buy"
            app:layout_constraintRight_toRightOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>